OLMIS-3179: made search catalog items restful
